// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi layer fee message when balance and token price checker is disabled should match screenshot 1`] = `
<div>
  <div
    class="multi-layer-fee-message"
  >
    <div
      class="transaction-detail-item"
    >
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-md mm-text--font-weight-bold box--display-flex box--flex-direction-row box--flex-wrap-nowrap box--align-items-center box--color-text-default"
        >
          Layer 1 fees
        </h6>
        <div
          class="transaction-detail-item__detail-values"
        >
          <h6
            class="box mm-text mm-text--body-md mm-text--font-weight-bold mm-text--text-align-right box--margin-left-1 box--flex-direction-row box--color-text-default"
          >
            Unknown
          </h6>
        </div>
      </div>
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        />
        <h6
          align="end"
          class="box mm-text transaction-detail-item__row-subText mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        />
      </div>
    </div>
    <div
      class="transaction-detail-item"
    >
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-md mm-text--font-weight-bold box--display-flex box--flex-direction-row box--flex-wrap-nowrap box--align-items-center box--color-text-default"
        >
          Total
        </h6>
        <div
          class="transaction-detail-item__detail-values"
        >
          <h6
            class="box mm-text mm-text--body-md mm-text--font-weight-bold mm-text--text-align-right box--margin-left-1 box--flex-direction-row box--color-text-default"
          >
            0.001000021000 ETH
          </h6>
        </div>
      </div>
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        >
          Amount + fees
        </h6>
        <h6
          align="end"
          class="box mm-text transaction-detail-item__row-subText mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Multi layer fee message when balance and token price checker is enabled should match snapshot 1`] = `
<div>
  <div
    class="multi-layer-fee-message"
  >
    <div
      class="transaction-detail-item"
    >
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-md mm-text--font-weight-bold box--display-flex box--flex-direction-row box--flex-wrap-nowrap box--align-items-center box--color-text-default"
        >
          Layer 1 fees
        </h6>
        <div
          class="transaction-detail-item__detail-values"
        >
          <h6
            class="box mm-text mm-text--body-md box--flex-direction-row box--color-text-alternative"
          >
            Unknown
          </h6>
          <h6
            class="box mm-text mm-text--body-md mm-text--font-weight-bold mm-text--text-align-right box--margin-left-1 box--flex-direction-row box--color-text-default"
          >
            Unknown
          </h6>
        </div>
      </div>
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        />
        <h6
          align="end"
          class="box mm-text transaction-detail-item__row-subText mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        />
      </div>
    </div>
    <div
      class="transaction-detail-item"
    >
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-md mm-text--font-weight-bold box--display-flex box--flex-direction-row box--flex-wrap-nowrap box--align-items-center box--color-text-default"
        >
          Total
        </h6>
        <div
          class="transaction-detail-item__detail-values"
        >
          <h6
            class="box mm-text mm-text--body-md box--flex-direction-row box--color-text-alternative"
          >
            <div
              class="currency-display-component"
              title="$0.56"
            >
              <span
                class="currency-display-component__prefix"
              />
              <span
                class="currency-display-component__text"
              >
                $0.56
              </span>
            </div>
          </h6>
          <h6
            class="box mm-text mm-text--body-md mm-text--font-weight-bold mm-text--text-align-right box--margin-left-1 box--flex-direction-row box--color-text-default"
          >
            0.001000021000 ETH
          </h6>
        </div>
      </div>
      <div
        class="transaction-detail-item__row"
      >
        <h6
          class="box mm-text mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        >
          Amount + fees
        </h6>
        <h6
          align="end"
          class="box mm-text transaction-detail-item__row-subText mm-text--body-sm box--flex-direction-row box--color-text-alternative"
        />
      </div>
    </div>
  </div>
</div>
`;
